<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<resources>
    <string name="app_name">SamplePay</string>

    <string name="home_explanation">
        This is a sample payment app. Use the SampleMerchant web site to initiate a transaction.
    </string>
    <string name="total_format">Total: %s %s</string>
    <string name="payment_explanation">
        This is a sample payment app, and no actual payment will be processed.
    </string>
    <string name="shipping_format">Selected %s option:\n %s %s %s</string>
    <string name="pay">Pay</string>
    <string name="error_caller_not_chrome">The caller is not Chrome.</string>
    <string name="chrome_stable_fingerprint" translatable="false">F0:FD:6C:5B:41:0F:25:CB:25:C3:B5:33:46:C8:97:2F:AE:30:F8:EE:74:11:DF:91:04:80:AD:6B:2D:60:DB:83</string>
    <string name="chrome_beta_fingerprint" translatable="false">DA:63:3D:34:B6:9E:63:AE:21:03:B4:9D:53:CE:05:2F:C5:F7:F3:C5:3A:AB:94:FD:C2:A2:08:BD:FD:14:24:9C</string>
    <string name="chrome_dev_fingerprint" translatable="false">90:44:EE:5F:EE:4B:BC:5E:21:DD:44:66:54:31:C4:EB:1F:1F:71:A3:27:16:A0:BC:92:7B:CB:B3:92:33:CA:BF</string>
    <string name="chrome_canary_fingerprint" translatable="false">20:19:DF:A1:FB:23:EF:BF:70:C5:BC:D1:44:3C:5B:EA:B0:4F:3F:2F:F4:36:6E:9A:C1:E3:45:76:39:A2:4C:FC</string>
    <string name="chromium_fingerprint" translatable="false">32:A2:FC:74:D7:31:10:58:59:E5:A8:5D:F1:6D:95:F1:02:D8:5B:22:09:9B:80:64:C5:D8:91:5C:61:DA:D1:E0</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="payment_response">paymentActivityResponse</string>
    <string name="title_activity_payment_details_update">PaymentDetailsUpdate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="us_address">US address</string>
    <string name="canada_address">Canadian Address</string>
    <string name="uk_address">British Address</string>
    <string name="contact_information">Contact Information:</string>
    <string name="submit">Submit</string>
    <string name="promotion_code">Enter a Valid Code: e.g. 123</string>
    <string name="promotion_title">Promotion Code:</string>
</resources>
